<resources>
    <string name="app_name">途途导由</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">途途导由</string>
    <string name="default_city">成都</string>
    <string name="loading_now">正在加载</string>
    <string name="main_cancel_order">取消订单</string>
    <string name="login_title">手机登录</string>
    <string name="login_phone">手机号</string>
    <string name="login_code">验证码</string>
    <string name="login_phone_hint">+86</string>
    <string name="login_code_hint">请填写六位验证码</string>
    <string name="login_code_get">获取验证码</string>
    <string name="login_code_minute">s后重新获取</string>
    <string name="login_minute">S</string>
    <string name="login_pact_tip">登录即代表</string>
    <string name="login_protocol">阅读并同意Zack协议</string>
    <string name="login_name">登录</string>
    <string name="main_guide">导游</string>
    <string name="main_native">向导</string>
    <string name="main_withTour">随游</string>
    <string name="main_together">旅游</string>
    <string name="main_bowen">博文</string>
    <string name="main_reserve">预约导游</string>
    <string name="main_call">呼叫导游</string>
    <string name="main_current_tip">你从哪出发</string>
    <string name="main_destination_hint">输入目的地</string>
    <string name="menu_order">我的订单</string>
    <string name="menu_money">我的钱包</string>
    <string name="menu_msg">消息中心</string>
    <string name="menu_perferen">优惠券</string>
    <string name="menu_invite">邀请有奖</string>
    <string name="menu_recruit">导游招募</string>
    <string name="menu_setting">设置</string>
    <string name="txt_cancel">取消</string>
    <string name="txt_sure">确定</string>
    <string name="txt_people_num">出行人数</string>
    <string name="search_hint">你要去哪儿</string>
    <string name="search_null">搜索词不能为空</string>
    <string name="call_count_title">您的出行人数</string>
    <string name="call_count_one">1人</string>
    <string name="call_count_two">2-5人</string>
    <string name="call_count_three">6-10人</string>
    <string name="call_count_four">10人以上</string>
    <string name="call_sure">确认呼叫</string>
    <string name="call_sure_tips">正在呼叫导游</string>
    <string name="phone_tips">请输入手机号码</string>
    <string name="phone_check">请输入正确的手机号码</string>
    <string name="code_tips">请输入验证码</string>
    <string name="myorder_title">我的订单</string>
    <string name="login_fail">登录失效，请重新登录</string>
    <string name="no_guide">暂无导游接单</string>
    <string name="no_together">暂无随游接单</string>
    <string name="cancel_success">取消成功</string>
    <string name="cancel_order">取消订单</string>
    <string name="cancel_time">取消时间:</string>
    <string name="cancel_pay">支付金额:</string>
    <string name="wechat_pay">微信支付</string>
    <string name="wechat_pay_tips">推荐安装微信6.0及以上版本的使用</string>
    <string name="alipay_pay">支付宝支付</string>
    <string name="alipay_pay_tips">推荐有支付宝账号的用户使用</string>
    <string name="submit_pay">确认支付</string>
    <string name="order_detail">订单明细</string>
    <string name="order_time">订单时间</string>
    <string name="service_time">服务时间</string>
    <string name="order_state">订单状态</string>
    <string name="pay_detail">支付明细:</string>
    <string name="pay_money">消费金额:</string>
    <string name="pay_tip">小费:</string>
    <string name="pay_coupon">优惠:</string>
    <string name="pay_total">总计:</string>
    <string name="pay_ways">支付方式:</string>
    <string name="pay_alipay">支付宝支付</string>
    <string name="pay_wechat">微信支付</string>
    <string name="guide_assess">我的评价</string>
    <string name="Complaints">投诉</string>
    <string name="order_detail_title">订单详情</string>
    <string name="order_immedia_pay">订单支付</string>
    <string name="reservat_info">预订信息</string>
    <string name="reservat_name">昵称</string>
    <string name="reservat_start_adr">出发地</string>
    <string name="reservat_end_adr">目的地</string>
    <string name="reservat_start_adr_hint">填写出发地址</string>
    <string name="reservat_end_adr_hint">填写目的地址</string>
    <string name="reservat_Sun">日</string>
    <string name="reservat_Mon">一</string>
    <string name="reservat_Tues">二</string>
    <string name="reservat_Wends">三</string>
    <string name="reservat_Thurs">四</string>
    <string name="reservat_Friday">五</string>
    <string name="reservat_Satur">六</string>
    <string name="choice_guide">选择导游</string>
    <string name="setoff_null">请设置出发地</string>
    <string name="end_null">请设置目的地</string>
    <string name="choice_null">暂无数据</string>
    <string name="reward_money">打赏金额</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_now">支付结果确认中</string>
    <string name="pay_fail">支付失败</string>
    <string name="pays_money">支付金额</string>
    <string name="submit_comment">提交评价</string>
    <string name="comment_txt">请在此输入评论内容</string>
    <string name="success_find_guide">已成功为您找到导游</string>
    <string name="cancel_find_guide">已停止呼叫导游</string>
    <string name="scole">分</string>
    <string name="long_cancel">长按取消</string>
    <string name="stop_find">停止呼叫</string>
    <string name="stop_order">正在加载</string>
    <string name="now_loading">正在加载</string>
    <string name="loading_locate">位置加载中</string>
    <string name="stork_time">行程时间：</string>
    <string name="not_start">未开始</string>
    <string name="guide_sex">导游性别</string>
    <string name="not_limit">不限</string>
    <string name="male">男性</string>
    <string name="female">女性</string>
    <string name="type_Language">语言种类</string>
    <string name="chinese">中文</string>
    <string name="english">英文</string>
    <string name="all_Language">全部</string>
    <string name="clear">清空</string>
    <string name="input_city_name">请输入城市的名字或拼音</string>
    <string name="nothing_found">没有搜索结果~</string>
    <string name="set_city">请先设置搜索城市</string>
    <string name="choice_city">城市选择</string>
    <string name="look_detail">查看详情</string>
    <string name="give_order_immedia">立即下单</string>
    <string name="user_info_title">个人信息</string>
    <string name="user_info_title_right_text">确认修改</string>
    <string name="user_info_head_text">头像</string>
    <string name="user_info_nickname_text">昵称</string>
    <string name="user_info_sex_text">性别</string>
    <string name="user_info_birthday_text">出生日期</string>
    <string name="user_info_name_text">真实姓名</string>
    <string name="user_info_phone_text">手机号</string>
    <string name="select_album_take_photo">拍照</string>
    <string name="select_album_photo_gallery">相册</string>
    <string name="no_sdcard">存储卡不可用</string>
    <string name="pic_error">所选图片文件格式有误</string>
    <string name="no_pic">选择图片错误</string>
    <string name="green_pic_size">附件过大，请重新选择</string>
    <string name="select_sex_male">男</string>
    <string name="select_sex_female">女</string>
    <string name="cancel">取消</string>
    <string name="immediaServer">即时服务</string>
    <string name="reserveServer">预约服务</string>
    <string name="orderReserve">已预约</string>
    <string name="orderFinish">已完成</string>
    <string name="orderClose">已关闭</string>
    <string name="orderGeton">进行中</string>
    <string name="orderWaitSure">待确认</string>
    <string name="setting_title">设置</string>
    <string name="setting_user_guide">用户指南</string>
    <string name="setting_consumer_hotline">客服电话</string>
    <string name="setting_legal">法律条款</string>
    <string name="setting_about">关于途途导由</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_sign_out">退出登录</string>
    <string name="about_title">关于</string>
    <string name="about_basic_intro">基本介绍</string>
    <string name="about_current_version">当前版本</string>
    <string name="about_contact_us">联系我们</string>
    <string name="user_guide_title">用户指南</string>
    <string name="user_guide_about_tour">关于导游</string>
    <string name="user_guide_about_darky">关于向导</string>
    <string name="user_guide_about_follow">关于随游</string>
    <string name="user_guide_book">即时和预约</string>
    <string name="user_guide_cancel_order">取消订单</string>
    <string name="together_price">价格</string>
    <string name="together_num">导游</string>
    <string name="city_Name">市</string>
    <string name="cancel_order_suc">取消订单成功</string>
    <string name="setReservatTime">请设置预约时间</string>
    <string name="tour_detail_order">下单</string>
    <string name="server_day">/天</string>
    <string name="server_hour">/小时</string>
    <string name="server_times">次</string>
    <string name="check_birthday">请检查生日的正确性</string>
    <string name="not_modify">您未做任何修改</string>
    <string name="modify_success">个人信息修改成功</string>
    <string name="thank_feedback">感谢您的宝贵意见</string>
    <string name="submit_btn">提交</string>
    <string name="submit_to_pay">支付</string>
    <string name="to_reward">打赏</string>
    <string name="to_reward_tips">感谢您的好评，感觉服务很不错的话就去打赏吧，我们需要您的认可</string>
    <string name="to_reward_sure">豪气打赏</string>
    <string name="to_reward_cancel">不想打赏</string>
    <string name="title_StartStroke">服务开始</string>
    <string name="msg_StartStroke">您的即时服务已经开始计时</string>
    <string name="yes_stroke">继续行程</string>
    <string name="cancel_stroke">取消订单</string>
    <string name="yuan_hour">元/小时</string>
    <string name="attation">提醒:</string>
    <string name="attation_one">按小时计费，用时1小时起，不满1小时按1小时收费。</string>
    <string name="attation_two">平台为用户提供价值10万元意外保险</string>
    <string name="suc_modify_head">头像修改成功</string>
    <string name="accident_insurance">意外险</string>
    <string name="accident_tip">价值10万元意外保险，请仔细核对填写身份信息</string>
    <string name="call_name">真实姓名</string>
    <string name="call_input_name">请输入您的真实姓名</string>
    <string name="call_iD">身份证号</string>
    <string name="call_input_iD">请输入身份证号</string>
    <string name="call_input_rightID">请输入正确的身份证号</string>
    <string name="call_cal_price">计算方法:</string>
    <string name="call_travalTime">游玩时间</string>
    <string name="call_accIns">保险</string>
    <string name="exit_app">再按一次退出程序</string>
    <string name="provice">省</string>
    <string name="guide_Personal">导游主页</string>
    <string name="phoneSever">客服电话</string>
    <string name="yuan">元</string>
    <!--向导-->
    <string name="find_Native">正在呼叫向导</string>
    <string name="find_Togeher">正在呼叫随游</string>
    <string name="immedia_native">呼叫向导</string>
    <string name="no_native">暂无向导接单</string>
    <string name="success_find_native">已成功为您找到向导</string>
    <string name="immedia_together">呼叫随游</string>
    <string name="reservat_together">预约随游</string>
    <string name="input_star">请评定星级</string>
    <string name="no_hasTogether">暂无随游</string>
    <string name="call_immedia">立即呼叫</string>
    <string name="call_guide_txt">立即呼叫</string>
    <string name="pay_need">需要支付</string>
    <string name="pay_yuan">￥</string>
    <string name="pay_order_num">订单号</string>
    <string name="pay_startTime">开始服务</string>
    <string name="pay_stopTime">结束服务</string>
    <string name="pay_Times">服务时长</string>
    <string name="pay_reward">打赏</string>
    <string name="pay_coupons">优惠券</string>
    <string name="order_guide">导</string>
    <string name="order_native">向</string>
    <string name="order_immedia">即</string>
    <string name="order_reservat">预</string>
    <string name="order_comement_hint">其他意见和建议</string>
    <string name="pay_yes">已支付</string>
    <string name="order_cancel_tral">您取消了行程</string>
    <string name="order_free">导游接单5分钟内免费取消</string>
    <string name="callInNow">正在呼叫,请等待</string>
    <!--LoadingListView-->
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_nomore">没有更多数据</string>
    <string name="load_fail">加载失败</string>
    <string name="load_succeed">加载成功</string>
</resources>
