<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/payExtrueMon_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_sixteen"
        android:layout_marginRight="@dimen/dp_sixteen">

        <TextView
            android:id="@+id/statePay_tv"
            style="@style/textView_Black"
            android:text="@string/pay_money"
            android:textSize="@dimen/sp_fifteen" />

        <TextView
            android:id="@+id/payExtrueMon_tv"
            style="@style/textView_Black"
            android:layout_alignParentRight="true"
            android:text="￥540"
            android:textColor="@color/mainCircle2"
            android:textSize="@dimen/sp_fifteen" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rewardMon_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_sixteen"
        android:layout_marginRight="@dimen/dp_sixteen"
        android:layout_marginTop="@dimen/dp_ten">

        <TextView
            style="@style/textView_Black"
            android:text="@string/pay_tip"
            android:textSize="@dimen/sp_fifteen" />

        <TextView
            android:id="@+id/rewardMon_tv"
            style="@style/textView_Black"
            android:layout_alignParentRight="true"
            android:text="+10"
            android:textColor="@color/mainCircle2"
            android:textSize="@dimen/sp_fifteen" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/couponMon_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_sixteen"
        android:layout_marginRight="@dimen/dp_sixteen"
        android:layout_marginTop="@dimen/dp_ten">

        <TextView
            style="@style/textView_Black"
            android:text="@string/pay_coupon"
            android:textSize="@dimen/sp_fifteen" />

        <TextView
            android:id="@+id/couponMon_tv"
            style="@style/textView_Black"
            android:layout_alignParentRight="true"
            android:text="-30"
            android:textColor="@color/mainCircle2"
            android:textSize="@dimen/sp_fifteen" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/totalMon_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_sixteen"
        android:layout_marginRight="@dimen/dp_sixteen"
        android:layout_marginTop="@dimen/dp_ten">

        <TextView
            android:id="@+id/total_payTip_tv"
            style="@style/textView_Black"
            android:text="@string/pay_total"
            android:textSize="@dimen/sp_fifteen" />

        <TextView
            android:id="@+id/totalMon_tv"
            style="@style/textView_Black"
            android:layout_alignParentRight="true"
            android:text="￥520"
            android:textColor="@color/mainCircle2"
            android:textSize="@dimen/sp_fifteen" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/payWay_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_sixteen"
        android:layout_marginRight="@dimen/dp_sixteen"
        android:layout_marginTop="@dimen/dp_ten">

        <TextView
            style="@style/textView_Black"
            android:text="@string/pay_ways"
            android:textSize="@dimen/sp_fifteen" />

        <TextView
            android:id="@+id/payWay_tv"
            style="@style/textView_Black"
            android:layout_alignParentRight="true"
            android:text="@string/pay_alipay"
            android:textSize="@dimen/sp_fifteen" />
    </RelativeLayout>
</LinearLayout>
