<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorTextBack"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_sixteen">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_ten"
            android:layout_marginRight="@dimen/dp_ten">

            <TextView
                android:id="@+id/peo_cancel_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="@dimen/dp_six"
                android:text="@string/txt_cancel"
                android:textColor="@color/colorTheme"
                android:textSize="@dimen/sp_fifteen" />

            <TextView
                android:id="@+id/peo_sure_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/dp_six"
                android:text="@string/txt_sure"
                android:textColor="@color/colorTheme"
                android:textSize="@dimen/sp_fifteen" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="@dimen/dp_six"
                android:text="@string/txt_people_num"
                android:textColor="@color/colorText"
                android:textSize="@dimen/sp_fifteen" />
        </RelativeLayout>

        <com.xbx.client.view.WheelView
            android:id="@+id/peonum_wheelView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
